--- a/styles.css
+++ b/styles.css
@@ -529,12 +529,13 @@ body {
 
 
 
+
+
 .gallery {
     display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    margin: auto;
-    grid-auto-rows: 400px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-auto-rows: 180px;
+    gap: 12px;
     padding: 10px;
 }
 
@@ -559,7 +560,6 @@ body {
     object-position: center !important;
     transition: transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     display: block;
-    border-radius: 20px;
 }
 
 
@@ -584,6 +584,8 @@ body {
 .gallery a:hover::after {
     left: 100%;
 }
+
+
 
 
 .row2 {
